example/lib/src/generated/errors/errors_localization_uz.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Uzbek (`uz`).
class ErrorsLocalizationUz extends ErrorsLocalization {
  ErrorsLocalizationUz([String locale = 'uz']) : super(locale);

  @override
  String get error => 'Xatolik yuz berdi';

  @override
  String get unexpectedError => 'Kutilmagan xato yuz berdi';

  @override
  String get bugReportSentText => 'Xato hisobot muvaffaqiyatli yuborildi.';
}
